z-index stacking issues fixed - user always on top

--- a/client/room/user-blob/user-blob.styl
+++ b/client/room/user-blob/user-blob.styl
@@ -4,6 +4,10 @@
   left 0
   border-radius 50%
   transition transform .25s linear
+  z-index 100
+
+  &.me
+    z-index 1000
 
   .user-blob-away-overlay
     position fixed
